--- a/deploy-k8-azure.yml
+++ b/deploy-k8-azure.yml
@@ -1,32 +1,12 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: review-app-moz
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: review-app-moz
-  template:
-    metadata:
-      labels:
-        app: review-app-moz
-    spec:
-      nodeSelector:
-        "beta.kubernetes.io/os": linux
-      containers:
-      - name: review-app-moz
-        ports:
-        - containerPort: 8000
-          name: review-port
----
 apiVersion: v1
-kind: Service
+kind: Pod
 metadata:
   name: review-app-moz
-spec:
-  type: LoadBalancer
-  ports:
-  - port: 80
-  selector:
+  labels:
     app: review-app-moz
+spec:
+  containers:
+  - name: review-app-moz
+    image: mozdockerregistry.azurecr.io/mozammiljenkins
+    ports:
+    - containerPort: 8000
