--- a/deploy-k8-azure.yml
+++ b/deploy-k8-azure.yml
@@ -8,5 +8,7 @@ spec:
   containers:
   - name: review-app-moz
     image: mozdockerregistry.azurecr.io/mozammiljenkins
+    imagePullSecrets:
+    - name: azure-registry-secret
     ports:
     - containerPort: 8000
